--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,10 @@
+version: "3.1"
+
 services:
   bagisto-php-apache:
     build:
       args:
         container_project_path: /var/www/html/
-        uid: 1000
-        user: $USER
       context: .
       dockerfile: ./Dockerfile
     image: bagisto-php-apache
